--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,8 @@
 @import url('constants.less');
 @import url('methods.less');
 
-// derived values 
+// derived values
+@default-font-size: 48px;
 @current-background-color: #bb8; //@default-background-color;
 @current-border-color: lighten(@current-background-color, 10%);
 @current-font-color: @current-background-color + 3.0* @shade-darker;
@@ -12,7 +13,7 @@
   .content-separator(0px, 5px);
 }
 
-html { 
+html {
     overflow-y: scroll;
 }
 
@@ -22,17 +23,17 @@ body {
     //  background-color: @body-background-color;
     .no-space();
     background-image: -webkit-gradient(
-        linear, 
-        left bottom, 
-        right top, 
-        color-stop(0, @dark-stripe), 
+        linear,
+        left bottom,
+        right top,
+        color-stop(0, @dark-stripe),
         color-stop(0.25, @dark-stripe),
         color-stop(0.25, @light-stripe),
-        color-stop(0.5, @light-stripe), 
-        color-stop(0.5, @dark-stripe), 
-        color-stop(0.75, @dark-stripe), 
+        color-stop(0.5, @light-stripe),
+        color-stop(0.5, @dark-stripe),
+        color-stop(0.75, @dark-stripe),
         color-stop(0.75, @light-stripe));
-    
+
     background-size: 20px 20px;
 
     .rounded-container(@default-page-width, 0px, 0px, @current-border-color, @current-background-color + @shade-darker);
@@ -46,7 +47,7 @@ body {
 	.rounded-container(@default-page-width, 5px, 3px, @current-border-color , @body-background-color + @shade-darker);
 	padding: 25px;
 	margin: 25px auto;
-	.font;  
+	.font;
 	min-height: @default-min-height;
 }
 
@@ -68,14 +69,14 @@ body {
         font-style: none;
         color: inherit;
     }
-  
+
     ul {
         list-style: none;
         margin: 0px;
         padding: 0px;
         text-align: right;
     }
-  
+
     li {
         display: inline;
         .container-padding(15px, 3px);
@@ -108,20 +109,20 @@ body {
 }
 
 #active-nav-item {
-    .rounded-container(@nav-item-width, 0px, 1px, @nav-item-color-hover * 0.75, @nav-item-color-hover * 0.75);        
+    .rounded-container(@nav-item-width, 0px, 1px, @nav-item-color-hover * 0.75, @nav-item-color-hover * 0.75);
     .transition(none, none, 0s);
     color: #fff;
 }
 
 .content {
-    .rounded-container(@default-page-width, 0px, 0px, @current-border-color, @current-background-color);  
+    .rounded-container(@default-page-width, 0px, 0px, @current-border-color, @current-background-color);
     margin-top: 10px;
     margin-bottom: 10px;
     clear: both;
     a:active, a:visited, a:link {
         text-decoration: none;
         font-weight: bold;
-        color: inherit;      
+        color: inherit;
         .transition(all, ease, 0.2s);
     }
     a:hover {
@@ -142,7 +143,7 @@ body {
         padding-left: 10px;
     }
     ul {
-        
+
     }
     li {
         list-style-type: square;
@@ -153,7 +154,7 @@ body {
 #contact-form {
     width: @form-item-width;
     height: auto;
-    margin: 20px;    
+    margin: 20px;
     font-family: @default-font-family;
     float: left;
     .form-item {
@@ -162,15 +163,15 @@ body {
         margin: 5px;
         font-size: floor(@default-font-size * 0.5);
     }
-    
+
     p {
         margin: 5px;
         padding: 0px;
         font-weight: bold;
         text-align: center;
-        font-size: floor(@default-font-size * 0.8);    
+        font-size: floor(@default-font-size * 0.8);
     }
-    
+
     input {
         width: @form-item-width;
         .rounded-container(@form-item-width, 3px, 1px, @current-border-color + 3.00 * @shade-brighter, @current-background-color + 3.00 * @shade-brighter);
@@ -179,7 +180,7 @@ body {
         font-weight: bold;
         font-size: floor(@default-font-size * 0.5);
     }
-    
+
     textarea {
         width: @form-item-width;
         min-height: 150px;
@@ -188,10 +189,10 @@ body {
         font-family: @default-font-family;
         font-size: floor(@default-font-size * 0.5);
     }
-    
+
     #submit-button {
         .rounded-container(floor(@form-item-width * 0.5), 0px, 1px, @current-border-color + 3.00 * @shade-brighter, @current-background-color + 3.00 * @shade-brighter);
-              
+
         text-align: center;
         vertical-align: middle;
         .transition(all, ease, 0.2s);
@@ -200,20 +201,20 @@ body {
         font-weight: bold;
         padding: 15px;
     }
-    
+
     #submit-button:hover {
         background-color: @current-background-color + 0.5 * @shade-darker;
         color: @current-background-color + 3.00 * @shade-brighter;
         border: solid 1px @current-background-color + @shade-brighter;
         cursor: pointer;
     }
-    
+
     #submit-button:active {
         background-color: @current-background-color + 0.85 * @shade-darker;
         color: @current-background-color + 1.00 * @shade-brighter;
         border: solid 1px @current-background-color + @shade-brighter;
     }
-    
+
     #copy {
         display: inline;
         text-align: left;
@@ -223,44 +224,44 @@ body {
         vertical-align: middle;
         height: 20px;
     }
-    #cc { 
+    #cc {
         width: 15px;
         height: 20px;
         margin-left: 0px;
         vertical-align: middle;
     }
-    
+
     #submit-button-text {
         height: 50px;
-        vertical-align: middle;  
+        vertical-align: middle;
     }
 }
 #email-warning, #subject-warning {
-    display: none;    
+    display: none;
 }
 
 input#human-check {
     padding: 5px;
-    font-size: floor(@default-font-size * 0.25); 
+    font-size: floor(@default-font-size * 0.25);
 }
 
 #social-links {
     width: @form-item-width;
     margin: 25px;
     float: left;
-    
+
     p {
         margin: 5px;
         padding: 0px;
         font-weight: bold;
-        text-align: center;    
+        text-align: center;
         font-size: floor(@default-font-size * 0.8);
-    }   
+    }
 }
 
 @social-icon-size: 125px;
 .social-icon {
-    width: @social-icon-size;    
+    width: @social-icon-size;
     height: @social-icon-size;
     .rounded-container(@social-icon-size, 0px, 1px, @current-background-color + 0.5, @current-background-color);
     .transition(all, ease, 0.2s);
@@ -273,12 +274,12 @@ input#human-check {
 
 .social-icon:hover {
     background-color: @current-background-color + 0.5 * @shade-darker;
-    
+
 }
 
 .social-icon:active {
     background-color: @current-background-color + @shade-darker;
-    
+
 }
 
 #social-icon-container {
@@ -301,55 +302,11 @@ input#human-check {
 
 // Miscellaneous
 #hey-there {
-    font-size: @default-font-size * 2.5;    
+    font-size: @default-font-size;
 }
 
 .clearer {
     clear: both;
-}
-
-
-// captcha
-#captcha, #captcha-refresh, #captcha-code {
-    float: left;
-}
-
-#captcha {
-    margin-right: 20px;
-}
-
-@captcha-input-width: @form-item-width * 0.35;
-input#captcha-code {
-    width: @captcha-input-width;    
-    margin: 0px;
-    font-size: @default-font-size * 0.30;
-    font-weight: normal;
-    margin-bottom: 5px;
-}
-
-#captcha-refresh { 
-    font-weight: bold;
-    .rounded-container(@captcha-input-width, 3px, 1px, @current-background-color + @shade-brighter * 0.5, @current-background-color);
-    height: 25px;
-    text-decoration: none;
-    color: inherit;      
-    .transition(all, ease, 0.2s);
-    font-size: @default-font-size * 0.40;
-    text-align: center;
-    padding: 5px;
-}
-
-#captcha-refresh:hover {
-    background-color: @current-background-color + 0.5 * @shade-darker;
-    color: @current-background-color + 3.00 * @shade-brighter;
-    border: solid 1px @current-background-color + @shade-brighter;
-    cursor: pointer;
-}
-
-#captcha-refresh:active {
-    background-color: @current-background-color + 0.85 * @shade-darker;
-    color: @current-background-color + 1.00 * @shade-brighter;
-    border: solid 1px @current-background-color + @shade-brighter;
 }
 
 #email-warning, #subject-warning {
@@ -376,31 +333,21 @@ input#captcha-code {
 
 }
 
+@latest-entry-font-size: floor(@default-font-size * 0.5);
 .latest-entry-content-item {
-  .rounded-container(floor(@default-page-width * 0.8), 3px, 5px, darken(@current-background-color, 50%), lighten(@current-background-color, 20%));
-  font-size: floor(@default-font-size * 0.30);
+  .rounded-container(floor(@default-page-width * 0.9), 3px, 4px, darken(@current-background-color, 50%), lighten(@current-background-color, 20%));
+  font-size: @latest-entry-font-size;
   margin: 10px;
   padding: 5px;
   .transition(all, ease, 0.2s);
   cursor: pointer;
 
   .latest-entry-content-item-source {
-
-  }
-
-  .latest-entry-content-item-timestamp {
-
-  }
-
-  .latest-entry-content-item-url {
-
-  }
-
-  .latest-entry-content-item-name {
-
+    font-size: floor(@latest-entry-font-size * 1.25);
+    font-weight: bold;
   }
 }
 
 .latest-entry-content-item:hover {
-  .rounded-container(floor(@default-page-width * 0.8), 3px, 5px, darken(@current-background-color, 50%), lighten(@current-background-color, 10%));
+  background-color: lighten(@current-background-color, 50%);
 }
