--- a/style/style.css
+++ b/style/style.css
@@ -426,70 +426,10 @@ input#human-check {
   margin-bottom: 15px;
 }
 #hey-there {
-  font-size: 120px;
+  font-size: 48px;
 }
 .clearer {
   clear: both;
-}
-#captcha,
-#captcha-refresh,
-#captcha-code {
-  float: left;
-}
-#captcha {
-  margin-right: 20px;
-}
-input#captcha-code {
-  width: 201.6px;
-  margin: 0px;
-  font-size: 14.399999999999999px;
-  font-weight: normal;
-  margin-bottom: 5px;
-}
-#captcha-refresh {
-  font-weight: bold;
-  width: 201.6px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  border: 1px solid #f3f3c0;
-  background-color: #bbbb88;
-  height: 25px;
-  text-decoration: none;
-  color: inherit;
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
-  /* Firefox 4 */
-  -moz-transition-property: all;
-  -moz-transition-duration: 0.2s;
-  -moz-transition-timing-function: ease;
-  -moz-transition-delay: 0s;
-  /* Safari and Chrome */
-  -webkit-transition-property: all;
-  -webkit-transition-duration: 0.2s;
-  -webkit-transition-timing-function: ease;
-  -webkit-transition-delay: 0s;
-  /* Opera */
-  -o-transition-property: all;
-  -o-transition-duration: 0.2s;
-  -o-transition-timing-function: ease;
-  -o-transition-delay: 0s;
-  font-size: 19.200000000000003px;
-  text-align: center;
-  padding: 5px;
-}
-#captcha-refresh:hover {
-  background-color: #848451;
-  color: #ffffff;
-  border: solid 1px #fffff7;
-  cursor: pointer;
-}
-#captcha-refresh:active {
-  background-color: #5d5d2a;
-  color: #fffff7;
-  border: solid 1px #fffff7;
 }
 #email-warning,
 #subject-warning {
@@ -506,13 +446,13 @@ input#captcha-code {
   padding: 5px;
 }
 .latest-entry-content-item {
-  width: 1024px;
+  width: 1152px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  border: 5px solid #2b2b19;
+  border: 4px solid #2b2b19;
   background-color: #e0e0c9;
-  font-size: 14px;
+  font-size: 24px;
   margin: 10px;
   padding: 5px;
   transition-property: all;
@@ -536,11 +476,10 @@ input#captcha-code {
   -o-transition-delay: 0s;
   cursor: pointer;
 }
+.latest-entry-content-item .latest-entry-content-item-source {
+  font-size: 30px;
+  font-weight: bold;
+}
 .latest-entry-content-item:hover {
-  width: 1024px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  border: 5px solid #2b2b19;
-  background-color: #cecea8;
+  background-color: #ffffff;
 }
